<?xml version="1.0"?>
<package format="2">
  <name>gazebo_server</name>
  <version>0.0.1</version>
  <description>
    Implements a set of tools for running Gazebo simulator.
  </description>

  <maintainer email="mvukov@example.com">Milan Vukov</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
